# SyncVision

./: .gitignore  MODEL_GUIDE.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  worklog.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: hazard_levels.json  object_descriptions.json
app/src/main/assets/models/: inaturalist_mnv2_int8.tflite  landmark_effnet_int8.tflite  weather_classifier_int8.tflite
app/src/main/assets/shaders/: composite_fragment.glsl  composite_vertex.glsl  label_fragment.glsl  label_vertex.glsl  outline_fragment.glsl  outline_vertex.glsl  path_fragment.glsl  path_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  contour_processor.cpp  contour_processor.h  jni_bridge.cpp  label_placer.cpp  label_placer.h  path_finder.cpp  path_finder.h  sync_diagram.cpp  sync_diagram.h
app/src/main/java/com/google/mediapipe/proto/: CalculatorProfileProto.java  GraphTemplateProto.java
app/src/main/java/com/syncvision/app/: SyncVisionApp.kt
app/src/main/java/com/syncvision/app/camera/: CameraConfig.java  CameraManager.java  FrameDispatcher.java
app/src/main/java/com/syncvision/app/data/: DescriptionLoader.java  HazardLevel.java  ObjectDao.java  ObjectDatabase.java  ObjectDescription.java
app/src/main/java/com/syncvision/app/ml/: BarcodePipeline.java  DepthPipeline.java  DetectionPipeline.java  FacePipeline.java  InferenceResult.java  LandmarkPipeline.java  ModelManager.java  OcrPipeline.java  PlantPipeline.java  SegmentationPipeline.java  WeatherPipeline.java
app/src/main/java/com/syncvision/app/nativelib/: NativeConstants.java  NativeProcessor.java
app/src/main/java/com/syncvision/app/rendering/: GLRenderer.java  GLSurfaceManager.java  OverlayRenderer.java
app/src/main/java/com/syncvision/app/rendering/shader/: CompositeShader.java  LabelShader.java  OutlineShader.java  ShaderProgram.java
app/src/main/java/com/syncvision/app/scene/: HazardScorer.java  ObjectFusion.java  PathAnalyzer.java  RelationshipExtractor.java  SceneUnderstanding.java  SyncDiagramGenerator.java  WeatherAnalyzer.java
app/src/main/java/com/syncvision/app/ui/: CameraFragment.java  InfoPanelView.java  MainActivity.java  OverlayView.java  SettingsActivity.java  SyncDiagramView.java
app/src/main/java/com/syncvision/app/util/: GreenTheme.java  PerformanceMonitor.java  PermissionHelper.java
app/src/main/res/drawable/: corner_bracket.xml  hazard_indicator.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  mode_button_bg.xml  scanline_overlay.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_camera.xml  view_info_panel.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml  settings.xml
scripts/: convert_midas.py  download_models.sh  train_landmark_model.py  train_weather_model.py
